fix wrong margin size

--- a/sections-browse/styles.scss
+++ b/sections-browse/styles.scss
@@ -29,7 +29,7 @@
       margin: 20px 0 60px 30%;
       list-style: none;
       li {
-        margin-bottom: 33.33%;
+        margin-bottom: 10px;
         a {
           text-decoration: none;
           &:hover,
